--- a/src/CSS-Folders/section3.css
+++ b/src/CSS-Folders/section3.css
@@ -23,7 +23,7 @@
   margin-bottom: 8px;
 }
 
-.portfolio-header h1 {
+.portfolio-header h2 {
   font-size: 32px;
   font-weight: 300;
   margin-bottom: 16px;
